# currencyconv-cli

./: .coverage  .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
currenapp/: main.py  tools.py  ui.py
tests/: test_main.py  test_tools.py  test_ui.py
