[tool.poetry]
name = "currenapp"
version = "0.1.0"
description = "A CLI to convert different currencies."
authors = ["caio <caio.2004vb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
typer = {extras = ["all"], version = "^0.6.1"}
python-dotenv = "^0.21.0"

[tool.poetry.scripts]
currenapp = "currenapp.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[tool.poe.tasks]
test = "pytest"
main = "python currenapp/main.py"
i = "poetry install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
