[tool.poetry]
name = "currenapp"
version = "1.0.0"
description = "A CLI to convert different currencies."
authors = ["caio <caio.2004vb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
typer = { extras = ["all"], version = "^0.6.1" }

[tool.poetry.scripts]
currenapp = "currenapp.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
httmock = "^1.4.0"
pytest-cov = "^4.0.0"

[tool.poe.tasks]
test = "poetry run pytest"
main = "poetry run python tests/test_main.py"
ui = "poetry run python tests/test_ui.py"
cov = "poetry run pytest -vv --cov=currenapp --cov-report=term-missing --cov-branch"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
